fix(key-value-item): add overflow hidden style to item wrapper element

--- a/packages/bezier-react/src/components/KeyValueItem/KeyValueItem.module.scss
+++ b/packages/bezier-react/src/components/KeyValueItem/KeyValueItem.module.scss
@@ -38,6 +38,7 @@
 }
 
 .ItemWrapper {
+  overflow: hidden;
   display: flex;
   align-items: flex-start;
 
